[package]
name = "json_parser_simple"
version = "0.1.2"
edition = "2021"
authors = ["ElectroMutex"]
description = "simple json parser lib"
license = "MIT"
documentation = "https://github.com/SkillfulElectro/json_parser.git"
homepage = "https://github.com/SkillfulElectro/json_parser.git"
repository = "https://github.com/SkillfulElectro/json_parser.git"
readme = "README.md"


[dependencies]
